[package]
name = "rust-ffmpeg"
version = "0.1.0"
edition = "2021"
authors = ["kn2414e@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.*", features = ["net", "io-util", "rt", "macros", "rt-multi-thread"]}
futures-core = "0.3.*"
futures = "0.3.*"
thiserror = "1.*"